--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,4 +4,4 @@ RUN mkdir -p /jarvey
 WORKDIR /jarvey
 COPY jarvey.streams-0.0.0-all.jar .
 
-CMD ["java", "-cp", "/jarvey/jarvey.streams-0.0.0-all.jar", "jarvey.streams.process.NodeZoneTrackerDockerMain"]
+CMD ["java", "-cp", "/jarvey/jarvey.streams-0.0.0-all.jar", "jarvey.streams.zone.process.NodeZoneTrackerDockerMain"]
