--- a/build.gradle
+++ b/build.gradle
@@ -62,7 +62,7 @@ dependencies {
 	compile(project(":utils"))
 	compile(project(":utils.geo"))
 	
-	// Log4j2
+	// Log4j2 & SLF4j bridge
 	implementation "org.apache.logging.log4j:log4j-api:${log4j_version}"
 	implementation "org.apache.logging.log4j:log4j-core:${log4j_version}"
 	implementation "org.apache.logging.log4j:log4j-slf4j-impl:${log4j_version}"
