--- a/docker/jarvey.streams/docker-compose.yml
+++ b/docker/jarvey.streams/docker-compose.yml
@@ -2,12 +2,12 @@ version: "3.1"
 
 services:
   jarvey-streams:
-    image: kwlee0220/jarvey.streams:0.1
+    image: kwlee0220/jarvey.streams:0.1.0
     container_name: jarvey-streams
     network_mode: host
     environment:
       KAFKA_APPLICATION_ID_CONFIG: "node-track"
-      KAFKA_BOOTSTRAP_SERVERS_CONFIG: "localhost:9092"
+      KAFKA_BOOTSTRAP_SERVERS_CONFIG: "localhost:9091,localhost:9092,localhost:9093"
 
       DNA_TOPIC_TRACKS: "node-tracks"
       DNA_TOPIC_ZONE_LINE_RELATIONS: "zone-line-relations"
@@ -20,3 +20,29 @@ services:
       DNA_ZONE_DB_JDBC_URL: "jdbc:postgresql://host.docker.internal:5432/dna"
       DNA_ZONE_DB_USER: "dna"
       DNA_ZONE_DB_PASSWORD: "urc2004"
+
+  turn-detect:
+    image: kwlee0220/jarvey.streams.turn:0.1.0
+    container_name: turn-detect
+    network_mode: host
+    environment:
+      KAFKA_APPLICATION_ID_CONFIG: "turn-detect"
+      KAFKA_BOOTSTRAP_SERVERS_CONFIG: "localhost:9091,localhost:9092,localhost:9093"
+
+      DNA_TOPIC_LOCATION_EVENTS: "location-events"
+      DNA_TOPIC_TURN_EVENTS: "turn-events"
+
+  export:
+    image: kwlee0220/jarvey.streams.export:0.1.0
+    container_name: export
+    volumes:
+      - ./data:/var/jarvey
+    network_mode: host
+    environment:
+      KAFKA_APPLICATION_ID_CONFIG: "jarvey.streams.export"
+      KAFKA_BOOTSTRAP_SERVERS_CONFIG: "localhost:9091,localhost:9092,localhost:9093"
+
+#      DNA_TARGET_TOPICS: "node-tracks,location-events,zone-locations,zone-residents,turn-events"
+      DNA_TARGET_TOPICS: "node-tracks"
+#      DNA_EXPORT_DIR: "data/logs"
+      DNA_ROLLING_PERIOD_HOURS: 2
