--- a/docker/jarvey.streams/docker-compose.yml
+++ b/docker/jarvey.streams/docker-compose.yml
@@ -5,44 +5,9 @@ services:
     image: kwlee0220/jarvey.streams:0.1.0
     container_name: jarvey-streams
     network_mode: host
+    env_file:
+      - "../jarvey.env"
     environment:
-      KAFKA_APPLICATION_ID_CONFIG: "node-track"
-      KAFKA_BOOTSTRAP_SERVERS_CONFIG: "localhost:9091,localhost:9092,localhost:9093"
+      KAFKA_APPLICATION_ID_CONFIG: "jarvey-streams-node-zone"
 
-      DNA_TOPIC_TRACKS: "node-tracks"
-      DNA_TOPIC_ZONE_LINE_RELATIONS: "zone-line-relations"
-      DNA_TOPIC_LOCATION_EVENTS: "location-events"
-      DNA_TOPIC_ZONE_LOCATIONS: "zone-locations"
-      DNA_TOPIC_ZONE_RESIDENTS: "zone-residents"
-
-      DNA_APP_REST_PORT: 15685
-
-      DNA_ZONE_DB_JDBC_URL: "jdbc:postgresql://host.docker.internal:5432/dna"
-      DNA_ZONE_DB_USER: "dna"
-      DNA_ZONE_DB_PASSWORD: "urc2004"
-
-  turn-detect:
-    image: kwlee0220/jarvey.streams.turn:0.1.0
-    container_name: turn-detect
-    network_mode: host
-    environment:
-      KAFKA_APPLICATION_ID_CONFIG: "turn-detect"
-      KAFKA_BOOTSTRAP_SERVERS_CONFIG: "localhost:9091,localhost:9092,localhost:9093"
-
-      DNA_TOPIC_LOCATION_EVENTS: "location-events"
-      DNA_TOPIC_TURN_EVENTS: "turn-events"
-
-  export:
-    image: kwlee0220/jarvey.streams.export:0.1.0
-    container_name: export
-    volumes:
-      - ./data/jarvey:/var/jarvey
-    network_mode: host
-    environment:
-      KAFKA_APPLICATION_ID_CONFIG: "jarvey.streams.export"
-      KAFKA_BOOTSTRAP_SERVERS_CONFIG: "kafka01:9092,kafka02:9092,kafka03:9092"
-      DNA_HDFS_CONF: /var/jarvey/hadoop-conf/jarvey-hdfs.xml
-      DNA_TARGET_TOPICS: "node-tracks"
-      DNA_EXPORT_ARCHIVE_DIR: datasets/export
-      DNA_EXPORT_TAIL_DIR: export-tails
-      DNA_ROLLING_PERIOD_HOURS: 2
+      JARVEY_APP_REST_PORT: 15685
