--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,4 +1,5 @@
 version: "3.1"
+name: jarvey-streams-only
 
 services:
   jarvey-streams:
@@ -7,42 +8,15 @@ services:
     network_mode: host
     environment:
       KAFKA_APPLICATION_ID_CONFIG: "node-track"
-      KAFKA_BOOTSTRAP_SERVERS_CONFIG: "localhost:9091,localhost:9092,localhost:9093"
-
-      JARVEY_TOPIC_TRACKS: "node-tracks"
-      JARVEY_TOPIC_ZONE_LINE_RELATIONS: "zone-line-relations"
-      JARVEY_TOPIC_LOCATION_EVENTS: "location-events"
-      JARVEY_TOPIC_ZONE_LOCATIONS: "zone-locations"
-      JARVEY_TOPIC_ZONE_RESIDENTS: "zone-residents"
-
-      JARVEY_APP_REST_PORT: 15685
-
-      JARVEY_ZONE_DB_JDBC_URL: "jdbc:postgresql://host.docker.internal:5432/dna"
-      JARVEY_ZONE_DB_USER: "dna"
-      JARVEY_ZONE_DB_PASSWORD: "urc2004"
-
-  turn-detect:
-    image: kwlee0220/jarvey.streams.turn:0.1.0
-    container_name: turn-detect
-    network_mode: host
-    environment:
-      KAFKA_APPLICATION_ID_CONFIG: "turn-detect"
-      KAFKA_BOOTSTRAP_SERVERS_CONFIG: "localhost:9091,localhost:9092,localhost:9093"
-
-      JARVEY_TOPIC_LOCATION_EVENTS: "location-events"
-      JARVEY_TOPIC_TURN_EVENTS: "turn-events"
-
-  export:
-    image: kwlee0220/jarvey.streams.export:0.1.0
-    container_name: export
-    volumes:
-      - ./data/jarvey:/var/jarvey
-    network_mode: host
-    environment:
-      KAFKA_APPLICATION_ID_CONFIG: "jarvey.streams.export"
-      KAFKA_BOOTSTRAP_SERVERS_CONFIG: "kafka01:9092,kafka02:9092,kafka03:9092"
-      JARVEY_HDFS_CONF: /var/jarvey/hadoop-conf/jarvey-hdfs.xml
-      JARVEY_TARGET_TOPICS: "node-tracks"
-      JARVEY_EXPORT_ARCHIVE_DIR: datasets/export
-      JARVEY_EXPORT_TAIL_DIR: export-tails
-      JARVEY_ROLLING_PERIOD_HOURS: 2
+#      KAFKA_BOOTSTRAP_SERVERS_CONFIG: "kafka01:9092,kafka02:9092,kafka03:9092"
+      KAFKA_BOOTSTRAP_SERVERS_CONFIG: "localhost:9092"
+      
+      DNA_TOPIC_TRACKS: "node-tracks"
+      DNA_TOPIC_ZONE_LINE_RELATIONS: "zone-line-relations"
+      DNA_TOPIC_ZONE_LOCATIONS: "zone-locations"
+      DNA_TOPIC_ZONE_RESIDENTS: "zone-residents"
+      DNA_TOPIC_LOCATION_EVENTS: "location-events"
+      
+      DNA_JDBC_URL: "jdbc:postgresql://host.docker.internal:5432/dna"
+      DNA_JDBC_USER: "dna"
+      DNA_JDBC_PASSWORD: "urc2004"
