--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ repositories {
 ext {
 	log4j_version = '2.18.0'
 	gson_version = '2.9.0'
+	snakeyaml_version = '1.20'
 	
 	geotools_version = '26.1'
 	jts_version = '1.18.2'
@@ -69,6 +70,7 @@ dependencies {
 	
 	implementation "com.google.code.gson:gson:${gson_version}"
 	implementation "org.apache.avro:avro:${avro_version}"
+	implementation "org.yaml:snakeyaml:${snakeyaml_version}"
 	
 	// GeoTools
 	implementation	"org.geotools:gt-main:${geotools_version}"
