--- a/mcmot_configs.yaml
+++ b/mcmot_configs.yaml
@@ -4,13 +4,15 @@ kafka:
    topics:
       node-tracks: node-tracks
       track-features: track-features
+      tracklet-associateds: tracklet-associateds
       global-tracks: global-tracks
 
-jdbc: postgresql:localhost:5432:dna:urc2004:dna
+jdbc: postgresql:localhost:6432:dna:urc2004:dna
 tables:
    associations: associations
    node-tracks: node_tracks_index
    track-features: track_features_index
+   tracklet-associateds: tracklet-associateds
 
 motion:
    overlap-area: overlap_areas_m.yaml
@@ -20,5 +22,7 @@ motion:
       max-distance: 8m
    
 output:
-   topic: global-tracks-running
-   delay: 0s
+   max-association-delay: 3m
+   cache-size: 128
+   interval: 100ms
+   grace-time: 100ms
