--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,10 @@
-apply plugin: 'java-library'
-apply plugin: 'maven-publish'
-apply plugin: 'com.google.protobuf'
-apply plugin: 'com.github.johnrengelman.shadow'
-//apply plugin: 'com.commercehub.gradle.plugin.avro'
+plugins {
+	id 'java-library'
+	id 'eclipse'
+	id 'com.google.protobuf' version '0.9.4'
+	id 'com.github.johnrengelman.shadow' version '7.1.2'
+	id 'maven-publish'
+}
 
 group = 'etri'
 version = '24.01.17'
@@ -10,48 +12,33 @@ version = '24.01.17'
 sourceCompatibility = JavaVersion.VERSION_1_8
 [compileJava,compileTestJava]*.options*.encoding = 'UTF-8'
 
-buildscript {
-	repositories {
-		mavenLocal()
-		jcenter()
-		maven {
-			url "https://plugins.gradle.org/m2/"
-		}
-	}
-	dependencies {
-		classpath 'com.github.jengelman.gradle.plugins:shadow:4.0.4'
-		classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.7'
-//		classpath 'com.google.protobuf:protobuf-gradle-plugin:0.9.3'
-//		classpath 'com.netflix.nebula:gradle-aggregate-javadocs-plugin:2.2.+'
-//		classpath 'com.commercehub.gradle.plugin:gradle-avro-plugin:0.9.1'
-	}
-}
-
 protobuf {
     protoc {
-        artifact = "com.google.protobuf:protoc:3.23.2"
+        artifact = "com.google.protobuf:protoc:3.25.2"
     }
     plugins {
         grpc {
-            artifact = 'io.grpc:protoc-gen-grpc-java:1.54.1'
+            artifact = 'io.grpc:protoc-gen-grpc-java:1.60.1'
         }
     }
     generateProtoTasks {
-        all()*.plugins {
-            grpc {}
+    	ofSourceSet('main').configureEach {
+    		plugins {
+            	grpc {}
+            }
         }
     }
 }
 
 sourceSets {
 	main {
+		proto {
+			srcDirs 'src/main/proto'
+		}
 		java {
 			srcDirs 'build/generated/source/proto/main/grpc'
 			srcDirs 'build/generated/source/proto/main/java'
 		}
-//		proto {
-//			srcDirs 'src/main/proto'
-//		}
 	}
 }
 
@@ -59,9 +46,11 @@ repositories {
 	mavenLocal()
 	maven {
 		url "http://repo.osgeo.org/repository/release/"
+		allowInsecureProtocol = true
 	}
 	maven {
 		url "https://packages.confluent.io/maven/"
+		allowInsecureProtocol = true
 	}
 	mavenCentral()
 }
@@ -154,6 +143,10 @@ task javadocJar(type: Jar) {
 	from javadoc.destinationDir
 }
 
+// duplication 오류 방지용
+tasks.withType(Copy).all { duplicatesStrategy = DuplicatesStrategy.EXCLUDE }
+tasks.withType(Jar) { duplicatesStrategy = DuplicatesStrategy.EXCLUDE }
+
 artifacts {
 	archives sourceJar
 	archives javadocJar
@@ -168,58 +161,6 @@ publishing {
 			artifact sourceJar
 			artifact javadocJar
 			artifact shadowJar
-		}
-	}
-}
-
-apply plugin: 'maven-publish'
-publishing {
-	publications {
-		main(MavenPublication) {
-			artifact jar
-			artifact sourceJar
-			artifact javadocJar
-		}
-	}
-}
-
-apply plugin: 'eclipse'
-eclipse {
-	classpath {
-		file {
-			withXml {
-				def node = it.asNode()
-				node.appendNode('classpathentry', [kind: 'output', path: 'classes'])
-			}
-			
-			whenMerged { cp ->
-				Map entryByPath = cp.entries.groupBy { entry -> entry.path }
-				entryByPath.each { key, values ->
-					if ( values.size() > 1 ) {
-            			def entry = values.first()
-            			if ( entry.kind == 'src' ) {
-            				entry.includes = []
-            				entry.excludes = []
-            			}
-            			int index = cp.entries.indexOf entry
-            			cp.entries.removeAll values
-            			cp.entries.add index, entry
-					}
-				}
-				cp.entries.each { entry ->
-					if ( entry.kind == 'src' && entry.hasProperty('output') ) {
-						if ( entry.path.startsWith("src/test/") ) {
-							entry.output = 'test_classes'
-						}
-						else if ( entry.path.startsWith("build/generated/source/proto/test/") ) {
-							entry.output = 'test_classes'
-						}
-						else {
-							entry.output = 'classes'
-						}
-					}
-				}
-			}
 		}
 	}
 }
