--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,7 @@ repositories {
 }
 
 ext {
-	log4j_version = '2.18.0'
+	logback_version = '1.5.2'
 	gson_version = '2.9.0'
 	snakeyaml_version = '1.20'
 	picocli_version = '3.9.6'
@@ -82,10 +82,12 @@ dependencies {
 	implementation project(":utils")
 	implementation project(":utils.geo")
 	
-	// Log4j2 & SLF4j bridge
-	implementation "org.apache.logging.log4j:log4j-api:${log4j_version}"
-	implementation "org.apache.logging.log4j:log4j-core:${log4j_version}"
-	implementation "org.apache.logging.log4j:log4j-slf4j-impl:${log4j_version}"
+	// Logback with SLF4j
+	testImplementation "ch.qos.logback:logback-classic:${logback_version}"
+	
+//	implementation "org.apache.logging.log4j:log4j-api:${log4j_version}"
+//	implementation "org.apache.logging.log4j:log4j-core:${log4j_version}"
+//	implementation "org.apache.logging.log4j:log4j-slf4j-impl:${log4j_version}"
 	
 	implementation "com.google.code.gson:gson:${gson_version}"
 	implementation "org.apache.avro:avro:${avro_version}"
@@ -143,7 +145,7 @@ task javadocJar(type: Jar) {
 	from javadoc.destinationDir
 }
 
-// duplication ¿À·ù ¹æÁö¿ë
+// duplication ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 tasks.withType(Copy).all { duplicatesStrategy = DuplicatesStrategy.EXCLUDE }
 tasks.withType(Jar) { duplicatesStrategy = DuplicatesStrategy.EXCLUDE }
 
@@ -161,6 +163,43 @@ publishing {
 			artifact sourceJar
 			artifact javadocJar
 			artifact shadowJar
+		}
+	}
+}
+
+eclipse {
+	classpath {
+		file {
+			withXml {
+				def node = it.asNode()
+				node.appendNode('classpathentry', [kind: 'output', path: 'build/classes'])
+			}
+			
+			whenMerged { cp ->
+				Map entryByPath = cp.entries.groupBy { entry -> entry.path }
+				entryByPath.each { key, values ->
+					if ( values.size() > 1 ) {
+            			def entry = values.first()
+            			if ( entry.kind == 'src' ) {
+            				entry.includes = []
+            				entry.excludes = []
+            			}
+            			int index = cp.entries.indexOf entry
+            			cp.entries.removeAll values
+            			cp.entries.add index, entry
+					}
+				}
+				cp.entries.each { entry ->
+					if ( entry.kind == 'src' && entry.hasProperty('output') ) {
+						if ( entry.path.contains('/test/') ) {
+							entry.output = 'build/test_classes'
+						}
+						else {
+							entry.output = 'build/classes'
+						}
+					}
+				}
+			}
 		}
 	}
 }
