--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,7 @@ repositories {
 
 ext {
 	logback_version = '1.5.2'
+	guava_version = '32.1.3-jre'
 	gson_version = '2.9.0'
 	snakeyaml_version = '1.20'
 	picocli_version = '3.9.6'
@@ -81,6 +82,8 @@ ext {
 dependencies {
 	implementation project(":utils")
 	implementation project(":utils.geo")
+	
+	implementation "com.google.guava:guava:${guava_version}"
 	
 	// Logback with SLF4j
 	testImplementation "ch.qos.logback:logback-classic:${logback_version}"
