--- a/build.gradle
+++ b/build.gradle
@@ -77,7 +77,6 @@ ext {
 	okhttp_version = '4.10.0'
 	
 	rxjava_version = '3.1.8'
-	
 }
 
 dependencies {
@@ -129,7 +128,7 @@ dependencies {
 }
 
 shadowJar {
-	classifier 'all'
+//	classifier 'all'
 	
 	zip64 true
 	mergeServiceFiles()
